# onPrivilege

./: .gitignore  CMakeLists.txt  Readme.md
src/: CMakeLists.txt
src/OPApplication/: OPApplication.cc  OPApplication.h
src/OPCommon/: OPLogger.cc  OPLogger.h  OPSQLite.cc  OPSQLite.h  utils.cc  utils.h
src/OPHooking/: OPHooking.cc  XPoCe
src/OPModules/: BypassGKModule.cc  BypassGKModule.h  OPModule.cc  OPModule.h  RootingDetectModule.cc  RootingDetectModule.h  TCCBypassDetectModule.cc  TCCBypassDetectModule.h  TestModule.cc  TestModule.h
src/OPScanner/: OPScanner.cc  OPScanner.h
